# ai-client-delivery-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  client-config.example.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: validate.yml  weekly-digest.yml
docs/: data-flow.md  handoff.md  release.md  restricted-environment-options.md  security.md  setup.md
examples/: executive-brief.sample.md  weekly-digest.sample.md
platform-config/: chatgpt-github-connector.md  claude-project-setup.md  github-mcp-setup.md
prompts/account-research/: account-research.md
prompts/executive-brief/: executive-brief.md
prompts/quality-review/: quality-review.md
scripts/: bootstrap_repository.py  github_client.py  validate_prompt_library.py
tests/: test_bootstrap_repository.py  test_github_client.py  test_validate_prompt_library.py
