[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-client-delivery-kit"
version = "0.1.0"
description = "A compact AI client delivery toolkit with prompt validation and GitHub automation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AI Client Delivery Kit Maintainers" }
]
dependencies = [
  "PyYAML>=6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
py-modules = []
